--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,17 @@
 /* #Site Styles
 ================================================== */
 
+	body {
+		font-family: Helvetica;
+		font-weight: 100;
+	}
+
+	h1, h2, h3, h4, h5, h5, h6 {
+		font-weight: 200;
+	}
+
+	strong { font-weight: 500; }
+
 /* #Page Styles
 ================================================== */
 
